# response/log.go
@@ -15,5 +15,9 @@ type Log struct {
 	Status       string    `json:"status"`
 }
 type LogResponse struct {
-	Data []Log `json:"data"`
+	Page     int   `json:"page"`
+	PageSize int   `json:"pageSize"`
+	Total    int   `json:"total"`
+	Count    int   `json:"count"`
+	Data     []Log `json:"data"`
 }
